--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,204 +1,215 @@
 .container {
-  padding: 0 2rem;
+	padding: 0 2rem;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  margin-top: 4rem;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	min-height: 100vh;
+	padding: 4rem 0;
+	margin-top: 4rem;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-.flexStepButtons{
-  padding: 0 3rem;
-  width: 650px;
-  display: flex;
-  justify-content: space-between;
+.flexStepButtons {
+	padding: 0 3rem;
+	width: 650px;
+	display: flex;
+	justify-content: space-between;
 }
 
-.stepButton{
-  /* border: 1px solid #eaeaea; */
-  padding: 0.7rem 1.5rem;
-  border-radius: 0.5rem;
-  transition: 0.2s;
+.stepButton {
+	/* border: 1px solid #eaeaea; */
+	padding: 0.7rem 1.5rem;
+	border-radius: 0.5rem;
+	transition: 0.2s;
 }
 
-.stepButton:hover{
-  background-color: #eaeaea;
-  color: #0070f3;
-  cursor: pointer;
+.stepButton:hover {
+	background-color: #eaeaea;
+	color: #0070f3;
+	cursor: pointer;
 }
 
-.italic{
-  font-style: italic;
+.italic {
+	font-style: italic;
 }
 
-.flexIconDiv{
-  display: flex;
-  justify-content: center;
-  margin: 2rem 0;
+.flexIconDiv {
+	display: flex;
+	justify-content: center;
+	margin: 2rem 0;
 }
 
-.codeblue{
-  color: #a6f3ff;
-  background-color: #3b3b3b;
-  padding: 0.1rem 0.5rem;
-  border-radius: 0.5rem;
+.codeblue {
+	color: #a6f3ff;
+	background-color: #3b3b3b;
+	padding: 0.1rem 0.5rem;
+	border-radius: 0.5rem;
 }
 
-.codegreen{
-  color: #8affab;
-  background-color: #3b3b3b;
-  padding: 0.1rem 0.5rem;
-  border-radius: 0.5rem;
+.codegreen {
+	color: #8affab;
+	background-color: #3b3b3b;
+	padding: 0.1rem 0.5rem;
+	border-radius: 0.5rem;
 }
 
-.codeish{
-  color: #0070f3;
+.codeish {
+	color: #0070f3;
 }
 
-.extra{
-  color: #e93d3d;
-  font-style: italic;
-  font-size: 1rem;
+.extra {
+	color: #e93d3d;
+	font-style: italic;
+	font-size: 1rem;
 }
 
 .footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex: 1;
+	padding: 2rem 0;
+	border-top: 1px solid #eaeaea;
+	justify-content: center;
+	align-items: center;
 }
 
 .footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-grow: 1;
 }
 
 .title a {
-  color: #0070f3;
-  text-decoration: none;
+	color: #0070f3;
+	text-decoration: none;
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+	margin: 0;
+	line-height: 1.15;
+	font-size: 4rem;
 }
 
 .title,
 .description {
-  text-align: center;
+	text-align: center;
 }
 
 .description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+	margin: 4rem 0;
+	line-height: 1.5;
+	font-size: 1.5rem;
 }
 
 .code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+	background: #fafafa;
+	border-radius: 5px;
+	padding: 0.75rem;
+	font-size: 1.1rem;
+	font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+		DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	max-width: 800px;
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-  line-height: 140%;
+	margin: 1rem;
+	padding: 1.5rem;
+	text-align: left;
+	color: inherit;
+	text-decoration: none;
+	border: 1px solid #eaeaea;
+	border-radius: 10px;
+	transition: color 0.15s ease, border-color 0.15s ease;
+	max-width: 300px;
+	line-height: 140%;
 }
 
 .cardLong {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 650px;
-  line-height: 140%;
+	margin: 1rem;
+	padding: 1.5rem;
+	text-align: left;
+	color: inherit;
+	text-decoration: none;
+	border: 1px solid #eaeaea;
+	border-radius: 10px;
+	transition: color 0.15s ease, border-color 0.15s ease;
+	max-width: 650px;
+	line-height: 140%;
 }
 
-.cardLongImage{
-  border-radius: 0.5rem;
+.cardLongImage {
+	border-radius: 0.5rem;
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
-  padding-bottom: 0.5rem;
-  font-size: 1.5rem;
-  color: #0070f3;
+	margin: 0 0 1rem 0;
+	padding-bottom: 0.5rem;
+	font-size: 1.5rem;
+	color: #0070f3;
 }
 
 .cardLong h2 {
-  margin: 0 0 1rem 0;
-  padding-bottom: 0.5rem;
-  font-size: 1.5rem;
-  color: #0070f3;
+	margin: 0 0 1rem 0;
+	padding-bottom: 0.5rem;
+	font-size: 1.5rem;
+	color: #0070f3;
 }
 
-.descriptionIdea{
-  font-size: 1.2rem;
-  font-weight: bold;
+.descriptionIdea {
+	font-size: 1.2rem;
+	font-weight: bold;
 }
 
-.subDescription{
-  font-size: 1rem;
-  font-weight: bold;
+.subDescription {
+	font-size: 1rem;
+	font-weight: bold;
 }
 
-.divMaxI{
-  max-width: 650px;
-  line-height: 140%;
+.divMaxI {
+	max-width: 650px;
+	line-height: 140%;
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+	height: 1em;
+	margin-left: 0.5rem;
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+	.grid {
+		width: 100%;
+		flex-direction: column;
+	}
 }
 
-.opacDown{
-  opacity: 0;
+@media (max-width: 1120px) {
+	.flexStepButtons {
+		width: 100%;
+	}
+
+	.cardLong {
+		margin: 1rem 0;
+		padding: 1.5rem;
+	}
+}
+
+.opacDown {
+	opacity: 0;
 }
