--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,76 +1,83 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .black-icon {
-  color: black;
-  width: 20px;
-  height: 20px;
+	color: black;
+	width: 20px;
+	height: 20px;
 }
 
 .flex-content {
-  display: flex;
-  justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .flex-content-topnav {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 /* TOP NAV */
 
 .top-nav {
-  border-bottom: 1px solid #ebebeb;
-  background-color: white;
-  position: fixed;
-  z-index: 999;
-  width: 100vw;
+	border-bottom: 1px solid #ebebeb;
+	background-color: white;
+	position: fixed;
+	z-index: 999;
+	width: 100vw;
 }
 
 .top-nav-ul {
-  display: flex;
-  justify-content: space-between;
-  padding: 0 30px;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	padding: 0 30px;
+	z-index: 10000000000;
+	background-color: white;
 }
 
 .top-nav-li {
-  list-style-type: none;
-  text-align: center;
-  margin: 10px 30px 10px 0;
-  cursor: pointer;
+	list-style-type: none;
+	text-align: center;
+	margin: 10px 30px 10px 0;
+	cursor: pointer;
 }
 
 /**/
 
 .active-li {
-  color: #0070f3;
+	color: #0070f3;
 }
 
 .active-li .nav-li-head-list {
-  background-color: #0070f3;
+	background-color: #0070f3;
 }
 
 .active-li .nav-li-sub-list {
-  background-color: #0070f3;
+	background-color: #0070f3;
+}
+
+.flex-right-icons {
+	display: flex;
 }
 
 .nav-flexer {
-  display: flex;
-  width: 375px;
+	display: flex;
+	width: 375px;
 }
 
 /* .ul-wrapper{
@@ -82,57 +89,132 @@ a {
 } */
 
 .nav-ul {
-  padding-left: 30px;
-  margin-top: 110px;
-  left: 50px;
-  position: absolute;
+	padding-left: 30px;
+	margin-top: 110px;
+	left: 50px;
+	position: absolute;
 }
 
 .nav-line-div {
-  border-right: 1px solid #ebebeb;
-  margin-left: 50px;
-  height: 100vh;
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
+	border-right: 1px solid #ebebeb;
+	margin-left: 50px;
+	height: 100vh;
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
 }
 
 .nav-li {
-  font-weight: 300;
-  list-style-type: none;
-  margin: 12px 0;
+	font-weight: 300;
+	list-style-type: none;
+	margin: 12px 0;
 }
 
 .nav-li-head {
-  display: flex;
-  align-items: center;
-  margin-left: -36px /*- padding-left + width cirkel / 2 -*/;
-  font-weight: 400;
-  cursor: pointer;
+	display: flex;
+	align-items: center;
+	margin-left: -36px /*- padding-left + width cirkel / 2 -*/;
+	font-weight: 400;
+	cursor: pointer;
 }
 
 .nav-li-sub {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
+	display: flex;
+	align-items: center;
+	cursor: pointer;
 }
 
 .nav-li-sub-text {
-  margin: 0px;
+	margin: 0px;
 }
 
 .nav-li-head-list {
-  width: 12px /*- width -*/;
-  height: 12px;
-  background-color: #353535;
-  border-radius: 100%;
-  margin-right: 20px;
+	width: 12px /*- width -*/;
+	height: 12px;
+	background-color: #353535;
+	border-radius: 100%;
+	margin-right: 20px;
 }
 
 .nav-li-sub-list {
-  width: 7px;
-  height: 7px;
-  background-color: black;
-  border-radius: 100%;
-  margin-right: 20px;
+	width: 7px;
+	height: 7px;
+	background-color: black;
+	border-radius: 100%;
+	margin-right: 20px;
+}
+
+/* YT vid */
+.video-responsive {
+	width: 100%;
+	aspect-ratio: 1.78/1;
+}
+
+.video-responsive iframe {
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+}
+
+/* Desktop/Default Settings */
+.hamburger {
+	display: none; /* Hide on large screens */
+	cursor: pointer;
+	padding: 10px;
+}
+
+.line {
+	width: 25px;
+	height: 3px;
+	background-color: black;
+	margin: 5px 0;
+	transition: 0.4s;
+}
+
+/* THE MOBILE BREAKPOINT */
+@media (max-width: 1120px) {
+	.flex-content {
+		flex-direction: column;
+	}
+
+	.hamburger {
+		display: block; /* Show hamburger */
+	}
+
+	.nav-ul {
+		margin-top: 20px;
+	}
+
+	.nav-line-div {
+		top: ;
+	}
+
+	.nav-flexer {
+		display: none; /* Hide the sidebar by default */
+		position: fixed;
+		top: 70px; /* Adjust based on your top-nav height */
+		left: 0;
+		width: 100%;
+		height: calc(100vh - 70px);
+		background: white;
+		z-index: 950;
+		overflow-y: auto; /* Allow scrolling the huge list */
+	}
+
+	/* When the 'show-menu' class is added via React */
+	.nav-flexer.show-menu {
+		display: block;
+	}
+
+	/* Optional: Animate the hamburger to an 'X' */
+	.line.open:nth-child(1) {
+		transform: rotate(-45deg) translate(-5px, 6px);
+	}
+	.line.open:nth-child(2) {
+		opacity: 0;
+	}
+	.line.open:nth-child(3) {
+		transform: rotate(45deg) translate(-5px, -6px);
+	}
 }
