--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,6 +148,7 @@ a {
 .video-responsive {
 	width: 100%;
 	aspect-ratio: 1.78/1;
+	border-radius: 20px;
 }
 
 .video-responsive iframe {
@@ -155,6 +156,7 @@ a {
 	top: 0;
 	height: 100%;
 	width: 100%;
+	border-radius: 20px;
 }
 
 /* Desktop/Default Settings */
